# volleybot

./: .coveragerc  .dockerignore  .env.example  .gitignore  CERTBOT_SETUP.md  DEPLOY.md  Dockerfile  README.md  TESTING_QUICKSTART.md  WEBHOOK_SETUP.md  bot.py  config.example.json  config.py  docker-compose.yml  fly.toml  get_chat_id.py  handlers.py  manage.ps1  manage.sh  poll.py  pyproject.toml  pytest.ini  redeploy.ps1  redeploy.sh  renewal-hooks-example.sh  requirements.txt  scheduler.py  test_bot.py  test_commands.sh  update_certs.sh  utils.py
docs/: CONFIGURATION.md  TESTING.md  TESTING_QUICKSTART.md
src/: __init__.py  bot.py  config.py  db.py  handlers.py  poll.py  scheduler.py  types.py  utils.py
src/services/: __init__.py  admin_service.py  bot_state_service.py  poll_service.py
tests/: __init__.py  conftest.py  test_backups.py  test_balance_handlers.py  test_bot_lifecycle.py  test_calculate_subscription.py  test_config.py  test_db_players.py  test_db_polls.py  test_fund_and_subscriptions.py  test_handlers.py  test_poll.py  test_scheduler.py  test_utils.py
