[project]
name = "volleybot"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
dependencies = [
  "aiogram==3.29.0",
  "aiohttp>=3.14.1",
  "APScheduler>=3.11.3",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "rich>=15.0.0",
  "pytest-asyncio>=1.4.0",
  "pytest-mock>=3.15.1",
  "pytest-cov>=7.1.0",
]
